added blue to styles

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@ $grey-light:            #acacad;
 $grey-border:           #ccc;
 // $grey-dark:             #89949B;
 $orange:                #f36d22;
+$blue:                  #2e97de;
 
 // TYPOGRAPHY
 $font-family-base:      'Helvetica Neue', Helvetica, Arial, sans-serif;
