new button border bug fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -57,8 +57,8 @@ header {
         background-color: $white;
         border-bottom: 2px solid $orange;
         border-top: 1px solid $grey-border;
-        border-left: 1px solid $grey-border;
-        border-right: 1px solid $grey-border;
+        border-left: 1px solid $white;
+        border-right: 1px solid $white;
         border-radius: 0px;
       }
     }
