changed folder of banners

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -134,3 +134,11 @@ header {
     }
   }
 }
+
+// BANNER
+.banner {
+  background-size: 'cover';
+  background-repeat: 'no-repeat';
+  height: 200px;
+  color: $white;
+}
